fix bug - Case Sensitive in ArtikelController - Heading title in "Tahun Ajaran" - Restricted Spacing in Username field - content piling up between sidebar and content - Restricted alphabet in Phone Number - Showing error when password is empty

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4809,10 +4809,6 @@ ul, ol {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-red-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
@@ -5008,6 +5004,9 @@ ul, ol {
 }
 .pt-8{
   padding-top: 2rem;
+}
+.pl-0{
+  padding-left: 0px;
 }
 .text-left{
   text-align: left;
@@ -5743,6 +5742,9 @@ ul, ol {
   .sm\:pt-0{
     padding-top: 0px;
   }
+  .sm\:pl-0{
+    padding-left: 0px;
+  }
   .sm\:text-left{
     text-align: left;
   }
@@ -5809,8 +5811,21 @@ ul, ol {
   .md\:border-t-0{
     border-top-width: 0px;
   }
+  .md\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
   .md\:pl-8{
     padding-left: 2rem;
+  }
+  .md\:pl-10{
+    padding-left: 2.5rem;
+  }
+  .md\:pl-12{
+    padding-left: 3rem;
+  }
+  .md\:pl-24{
+    padding-left: 6rem;
   }
 }
 
@@ -6002,6 +6017,9 @@ ul, ol {
   .lg\:pr-\[16\.5rem\]{
     padding-right: 16.5rem;
   }
+  .lg\:pl-8{
+    padding-left: 2rem;
+  }
   .lg\:text-center{
     text-align: center;
   }
@@ -6031,5 +6049,11 @@ ul, ol {
 @media (min-width: 1280px){
   .xl\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  .xl\:pl-0{
+    padding-left: 0px;
+  }
+  .xl\:pl-8{
+    padding-left: 2rem;
   }
 }
